--- a/Sara_Sept 2nd, 2024.ipynb
+++ b/Sara_Sept 2nd, 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a19dae26",
+   "id": "f0c923b2",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "98c52b66",
+   "id": "7d839ff7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4a1418b9",
+   "id": "eb022651",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "902afbb2",
+   "id": "fad3f889",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "8b312e14",
+   "id": "88d88a99",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0489e647",
+   "id": "bfa5d70c",
    "metadata": {},
    "source": [
     "## Bigger headline"
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "cb3527d1",
+   "id": "e3ee4201",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "55152f6d",
+   "id": "70e3d046",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "b12f664f",
+   "id": "5bc9b5d8",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "fcdb4352",
+   "id": "4b6a747b",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "a02299d6",
+   "id": "91ccd71a",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "ae8631ef",
+   "id": "bff6afb0",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "00411db4",
+   "id": "2c632824",
    "metadata": {},
    "outputs": [
     {
@@ -247,8 +247,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "id": "0095d754",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your name: Sara\n",
+      "What is your city: Krakow\n"
+     ]
+    }
+   ],
+   "source": [
+    "name=input (\"Enter your name: \")\n",
+    "city=input ('What is your city: ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "7e29d693",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, Sara from Krakow.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Hello, {name} from {city}.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "ea4eca44",
+   "id": "17152c8b",
    "metadata": {},
    "outputs": [],
    "source": []
