--- a/shrasin2.ipynb
+++ b/shrasin2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6ca5fa4d",
+   "id": "4c08a65e",
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "aef4fe10",
+   "id": "b4279963",
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ddda40cd",
+   "id": "48b372ad",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0cf210eb",
+   "id": "d1916631",
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "fbbc4376",
+   "id": "a51764be",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "75c9a27c",
+   "id": "846954bd",
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "1e7338ca",
+   "id": "95aaacb8",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "16fa31a6",
+   "id": "c3201f9a",
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "614619c4",
+   "id": "5dfee032",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "1a89a5db",
+   "id": "66e6e1f1",
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb566746",
+   "id": "5bbd2a83",
    "metadata": {},
    "source": [
     "# markdown things\n",
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "77611e75",
+   "id": "ed77c16c",
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "0b85ba00",
+   "id": "eaf9bbbc",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "1c4f10f3",
+   "id": "2397cf15",
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "b977df7c",
+   "id": "8f4ad35b",
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "7caaaedb",
+   "id": "c64d3c14",
    "metadata": {},
    "outputs": [
     {
@@ -308,8 +308,71 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "id": "7d369569",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "10 < 20"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "39c6695c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "20 < 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "1d63ed6f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'back' < 'book'"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "dc275b66",
+   "id": "c8c9bd57",
    "metadata": {},
    "outputs": [],
    "source": []
