--- a/Fatos Blakaj Monday.ipynb
+++ b/Fatos Blakaj Monday.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "71f13cc2",
+   "id": "52ef5d58",
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "8fe2925f",
+   "id": "01e568a4",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "a5f871e7",
+   "id": "403e33e3",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "606e1130",
+   "id": "e4779aec",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "665c6c00",
+   "id": "8bc4f65a",
    "metadata": {
     "scrolled": true
    },
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "949d0ed3",
+   "id": "4c6085a9",
    "metadata": {},
    "outputs": [
     {
@@ -127,8 +127,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "id": "d81bcba8",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "incomplete input (997090572.py, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[30], line 3\u001b[0;36m\u001b[0m\n\u001b[0;31m    if name == \"Fatos\":\u001b[0m\n\u001b[0m                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m incomplete input\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = input(\"Enter your name: \")\n",
+    "\n",
+    "if name == \"Fatos\":\n",
+    "    print(\"Hello \")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "98efe425",
+   "id": "9e1ece38",
    "metadata": {},
    "outputs": [],
    "source": []
