--- a/Sara_Sept 2nd, 2024.ipynb
+++ b/Sara_Sept 2nd, 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f0c923b2",
+   "id": "2a54ac43",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7d839ff7",
+   "id": "5cebeea6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "eb022651",
+   "id": "aae13d37",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fad3f889",
+   "id": "61bb2aec",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "88d88a99",
+   "id": "5a0efc2a",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfa5d70c",
+   "id": "429ad790",
    "metadata": {},
    "source": [
     "## Bigger headline"
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e3ee4201",
+   "id": "ed18f3f1",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "70e3d046",
+   "id": "95d3dcad",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "5bc9b5d8",
+   "id": "18c2ef7d",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "4b6a747b",
+   "id": "87a1214e",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "91ccd71a",
+   "id": "34f0bca4",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "bff6afb0",
+   "id": "ef3e06b6",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "2c632824",
+   "id": "65d59317",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "0095d754",
+   "id": "f270f80f",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "7e29d693",
+   "id": "94b2e55c",
    "metadata": {},
    "outputs": [
     {
@@ -285,8 +285,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "id": "2e0bcedc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your name: Sara\n",
+      "Hello, Sara. Who are you?\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = input('Enter your name: ')\n",
+    "\n",
+    "if name == 'Reuven':\n",
+    "    print('Hello, boss!')\n",
+    "    print('It is so great to see you again!')\n",
+    "else:\n",
+    "    print(f'Hello, {name}. Who are you?')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "17152c8b",
+   "id": "cbbf62e3",
    "metadata": {},
    "outputs": [],
    "source": []
