--- a/Fatos Blakaj Monday.ipynb
+++ b/Fatos Blakaj Monday.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "52ef5d58",
+   "id": "45d559ce",
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "01e568a4",
+   "id": "c9d9917e",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "403e33e3",
+   "id": "3d894a92",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "e4779aec",
+   "id": "dd6d24a2",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "8bc4f65a",
+   "id": "7fb1bff1",
    "metadata": {
     "scrolled": true
    },
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "4c6085a9",
+   "id": "9d532ea3",
    "metadata": {},
    "outputs": [
     {
@@ -127,16 +127,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "d81bcba8",
+   "execution_count": 33,
+   "id": "37975036",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "incomplete input (997090572.py, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[30], line 3\u001b[0;36m\u001b[0m\n\u001b[0;31m    if name == \"Fatos\":\u001b[0m\n\u001b[0m                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m incomplete input\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your name: FAtos\n",
+      "Hello, FAtos. Who are you?\n"
      ]
     }
    ],
@@ -144,13 +144,16 @@
     "name = input(\"Enter your name: \")\n",
     "\n",
     "if name == \"Fatos\":\n",
-    "    print(\"Hello \")"
+    "    print(\"Hello \" + name)\n",
+    "else: \n",
+    "    print(f\"Hello, {name}. Who are you?\")\n",
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e1ece38",
+   "id": "0eae54dd",
    "metadata": {},
    "outputs": [],
    "source": []
