--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ac0a5715",
+   "id": "6a1eed70",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "89928ad5",
+   "id": "876f9c14",
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e0c4c46c",
+   "id": "1ff95f65",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d32ea9c2",
+   "id": "c8b70c2a",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "0c7fddb9",
+   "id": "28e66222",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "cb91574f",
+   "id": "baf7125c",
    "metadata": {},
    "outputs": [
     {
@@ -122,10 +122,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d56f770",
+   "id": "1c409026",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "name = input(\"Enter your name: \")\n",
+    "\n",
+    "if name == \"Joe\":\n",
+    "    print(\"Hello cool dude!\")\n",
+    "    print(\"How are you?\")\n",
+    "else:\n",
+    "    print(\"Hello\" {name} )"
+   ]
   }
  ],
  "metadata": {
